@@ -5,6 +5,11 @@ NEW FEATURES
 
     o new function `seqUnitSlidingWindows()`
 
+    o new function `seqUnitApply()`
+
+    o new variable "$variant_index" in `SeqGetData()`, `seqBlockApply() and
+      `seqUnitApply()` to get the indices of selected variants
+
 
 CHANGES IN VERSION 1.26.1
 -------------------------
